# math-ai-api

./: README.md  pyproject.toml
app/: main.py
