[project]
name = "math-learning-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi[standard]>=0.128.0",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.3",
    "langchain-mistralai>=1.1.1",
    "pypdf>=6.5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
# The version of the Python interpreter
target-version = "py313"
# The maximum length of a line before the formatter wraps it
line-length = 88

[tool.ruff.lint]
# "select" defines the rulesets to enable.
# E/W: Error and Warning (standard PEP 8)
# F: Pyflakes (logic errors)
# UP: pyupgrade (modernizes syntax automatically)
# B: flake8-bugbear (catches likely bugs)
# I: isort (organizes your imports)
select = ["E", "F", "UP", "B", "I"]

# Rules to explicitly skip
ignore = [
    "E501", # Ignore line-length violations
    "B008", # Allow function calls in default arguments
]

[tool.ruff.lint.isort]
# Ensure imports are grouped logically
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.format]
# Use double quotes for strings, which is the standard for modern Python
quote-style = "double"
# Ensure indentation is consistent
indent-style = "space"

[tool.pyright]
venvPath = "."
venv = ".venv"

